@@ -299,6 +299,12 @@ name|organisation
 decl_stmt|;
 specifier|private
 name|String
+name|branch
+init|=
+literal|null
+decl_stmt|;
+specifier|private
+name|String
 name|module
 decl_stmt|;
 specifier|private
@@ -673,6 +679,14 @@ operator|.
 name|setModule
 argument_list|(
 name|getModule
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setBranch
+argument_list|(
+name|getBranch
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1795,6 +1809,30 @@ operator|.
 name|organisation
 operator|=
 name|organisation
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getBranch
+parameter_list|()
+block|{
+return|return
+name|branch
+return|;
+block|}
+specifier|public
+name|void
+name|setBranch
+parameter_list|(
+name|String
+name|branch
+parameter_list|)
+block|{
+name|this
+operator|.
+name|branch
+operator|=
+name|branch
 expr_stmt|;
 block|}
 specifier|public
