@@ -286,6 +286,12 @@ literal|null
 decl_stmt|;
 specifier|private
 name|String
+name|branch
+init|=
+literal|null
+decl_stmt|;
+specifier|private
+name|String
 name|revision
 init|=
 literal|null
@@ -453,6 +459,30 @@ operator|.
 name|revision
 operator|=
 name|revision
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getBranch
+parameter_list|()
+block|{
+return|return
+name|branch
+return|;
+block|}
+specifier|public
+name|void
+name|setBranch
+parameter_list|(
+name|String
+name|branch
+parameter_list|)
+block|{
+name|this
+operator|.
+name|branch
+operator|=
+name|branch
 expr_stmt|;
 block|}
 specifier|public
@@ -900,6 +930,8 @@ argument_list|(
 name|organisation
 argument_list|,
 name|module
+argument_list|,
+name|branch
 argument_list|,
 name|revision
 argument_list|)
